@@ -1,6 +1,7 @@
 Release 1.1.47
   * Widened tech table so all users can see tech decimal places (thanks Trabi and Junta!)
   * Stats details tab automatically picks the opponent you've fought the most with.
+  * Fixed bug that wasn't listing units that gained mobility since last login in red
 
 Release 1.1.46
   * The Support tab now helps you manage support across the entire map--displaying overlapping support
